<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/MainActivityEditDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:onClick="onClick"
        android:text="@string/edit_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityMonthEditText" />

    <TextView
        android:id="@+id/MainActivitySpeciesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="16dp"
        android:text="@string/species"
        app:layout_constraintStart_toStartOf="@+id/MainActivityMainIntroTextView"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityMainIntroTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/MainActivityMainIntroTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/MainActivityYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@+id/MainActivitySpeciesEditText"
        app:layout_constraintTop_toBottomOf="@+id/MainActivitySpeciesEditText" />

    <TextView
        android:id="@+id/MainActivityMonthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/month"
        app:layout_constraintStart_toStartOf="@+id/MainActivityYearEditText"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityYearEditText" />

    <EditText
        android:id="@+id/MainActivitySpeciesEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/species_hint"
        app:layout_constraintStart_toStartOf="@+id/MainActivitySpeciesTextView"
        app:layout_constraintTop_toBottomOf="@+id/MainActivitySpeciesTextView">
        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/MainActivityYearEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/MainActivityYearTextView"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityYearTextView" />


    <EditText
        android:id="@+id/MainActivityMonthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/month_hint"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/MainActivityMonthTextView"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityMonthTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>